Bug 332314: Menu items are improperly aligned when using iconic menuitems, patch by Kai Liu <kliu@mozilla.kailiu.com>, r=me, r=zeniko, r=roc, a=damon